src/objects/Badge_Setting__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Criteria__c</fullName>
        <label>Criteria</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>This will appear when a user hovers their mouse over the badge.</inlineHelpText>
        <label>Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image_Display__c</fullName>
        <formula>IMAGE(Image__c, Criteria__c, 100, 100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image Display</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <inlineHelpText>Use static resource</inlineHelpText>
        <label>Image</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <label>Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <label>Sort Order</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Badge Setting</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Object__c</columns>
        <columns>Criteria__c</columns>
        <columns>Sort_Order__c</columns>
        <columns>Active__c</columns>
        <columns>Image__c</columns>
        <columns>Image_Display__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Badge-{0000000}</displayFormat>
        <label>Badge Setting Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Badge Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>